--- a/src/styles.css
+++ b/src/styles.css
@@ -55,12 +55,12 @@ button:hover {
   color: #666;
 }
 
-.list-row {
+.todo-item {
   display: flex;
   align-items: center;
   padding-bottom: 4px;
 }
 
-li {
+.todo-item p {
   margin-right: 8px;
 }
