--- a/src/styles.css
+++ b/src/styles.css
@@ -30,7 +30,7 @@ button:hover {
   cursor: pointer;
 }
 
-.imcompleted-area {
+.incompleted-area {
   background-color: #c6ffe2;
   width: 400px;
   min-height: 200px;
